--- a/Makefile.am
+++ b/Makefile.am
@@ -42,6 +42,7 @@ ninjastorms_SOURCES = \
     kernel/utilities.c kernel/utilities.h \
     kernel/interrupt_handler.S kernel/interrupt_handler.h \
     kernel/memory.h \
+    kernel/sync.S kernel/sync.h \
     kernel/mmio.c kernel/mmio.h \
     kernel/drivers/adc.c kernel/drivers/adc.h \
     kernel/drivers/button.c kernel/drivers/button.h \
