--- a/Makefile.am
+++ b/Makefile.am
@@ -43,7 +43,7 @@ ninjastorms_SOURCES = \
     kernel/syscall/process_control.c kernel/syscall/process_control.h \
     kernel/utilities.c kernel/utilities.h \
     kernel/interrupt_handler.S kernel/interrupt_handler.h \
-    kernel/memory.h \
+    kernel/hal/hal.h \
     kernel/mmio.c kernel/mmio.h \
     kernel/drivers/adc.c kernel/drivers/adc.h \
     kernel/drivers/button.c kernel/drivers/button.h \
