--- a/Makefile.am
+++ b/Makefile.am
@@ -56,9 +56,9 @@ ninjastorms_SOURCES = \
     kernel/drivers/spi.c kernel/drivers/spi.h \
     kernel/drivers/timer.c kernel/drivers/timer.h\
     kernel/drivers/interrupt.c kernel/drivers/interrupt.h \
-    user-mode/init.c user-mode/init.h \
-    user-mode/examples.c user-mode/examples.h \
-    user-mode/utilities.c user-mode/utilities.h
+    usermode/init.c usermode/init.h \
+    usermode/examples.c usermode/examples.h \
+    usermode/utilities.c usermode/utilities.h
 
 ninjastorms_LDADD = libc/libc.la -lgcc
 ninjastorms_LDFLAGS = -T kernel/link-arm-eabi.ld -Ttext $(LOADADDR)
